--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 schedule/Cimplo-win32-x64/
+
+schedule/release-builds/Cimplo-win32-ia32/
+
+schedule/release-builds/Cimplo-linux-x64/
+
+schedule/release-builds/Cimplo-darwin-x64/
