--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ schedule/release-builds/Cimplo-win32-ia32/
 schedule/release-builds/Cimplo-linux-x64/
 
 schedule/release-builds/Cimplo-darwin-x64/
+schedule/Cimplo-darwin-x64
