--- a/modeling/requirements.txt
+++ b/modeling/requirements.txt
@@ -72,6 +72,7 @@ tabulate=0.8.7=py38_0
 threadpoolctl=2.1.0=pyh5ca1d4c_0
 tk=8.6.10=hbc83047_0
 tornado=6.1=py38h27cfd23_0
+tqdm=4.54.1=pyhd3eb1b0_0
 wheel=0.36.1=pyhd3eb1b0_0
 xz=5.2.5=h7b6447c_0
 zlib=1.2.11=h7b6447c_3
