--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ schedule/release-builds/Cimplo-linux-x64/
 
 schedule/release-builds/Cimplo-darwin-x64/
 schedule/Cimplo-darwin-x64
+
+/modeling/__pycache__/
