Removed and ignored sample_datasets/KLM/

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@ schedule/app/modeling/dist/
 schedule/app/modeling/build/
 schedule/rf_model.joblib
 
-./sample_datasets/KLM/ # the KLM file. Removed for data protection reasons
+sample_datasets/KLM/
